--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,7 @@
 /* 
 * @Author: Jouhe
 * @Date:   2018-07-31 14:46:08
-* @Last Modified time: 2018-07-31 15:07:13
+* @Last Modified time: 2018-07-31 15:22:21
 */
 
 @charset "utf-8";
@@ -56,7 +56,7 @@ a {color: #000; text-decoration: none; cursor:pointer; cursor: hand}
 
 /*---内留白10px---*/
 .p10{ padding:10px;}
-.pt{padding-top:10px;}
+.pt10{padding-top:10px;}
 .pb10{padding-bottom:10px;}
 .pl10{padding-left:10px;}
 .pr10{padding-right:10px;}
@@ -67,7 +67,6 @@ a {color: #000; text-decoration: none; cursor:pointer; cursor: hand}
 .pb15{padding-bottom:15px;}
 .pl15{padding-left:15px;}
 .pr15{padding-right:15px;}
-
 
 /*---内留白20px---*/
 .p20{padding:20px;}
@@ -89,6 +88,13 @@ a {color: #000; text-decoration: none; cursor:pointer; cursor: hand}
 .mb10{ margin-bottom:10px;}
 .ml10{ margin-left:10px;}
 .mr10{ margin-right:10px;}
+
+/*---外留白10px---*/
+.m15{ margin:10px;}
+.mt15{ margin-top:10px;}
+.mb15{ margin-bottom:10px;}
+.ml15{ margin-left:10px;}
+.mr15{ margin-right:10px;}
 
 /*---外留白10px---*/
 .m20{margin:20px;}
